replace email auth with password login
